--- a/src/package.json
+++ b/src/package.json
@@ -46,6 +46,7 @@
     "caniuse-lite": "^1.0.30001690",
     "chalk": "^4.1.2",
     "chokidar": "^3.6.0",
+    "chromadb": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
